--- a/240319_html 연습/index.html
+++ b/240319_html 연습/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helloworld</title>
+    <link rel="stylesheet" href="css/style.css">
+    <style>
+        body {
+            background-color: floralwhite;
+        }
+    </style>
 </head>
 <body>
     <h1>연아윤</h1>
@@ -47,6 +53,19 @@
 
     <!-- alt = 이미지를 설명해준다 -->
     <img src="https://image.kpopmap.com/2023/08/riize.png" alt="라이즈오빠들" style="height: 400px;">
+    <hr>
+    <!-- 우선순위 젤 최고 -->
+        <h1 style = "background-color: violet; color:blueviolet;">아이브</h1>
+    <ul>
+        <li>유진</li>
+        <li>리즈</li>
+        <li>원영</li>
+        <li>가을</li>
+        <li>레이</li>
+        <li>이서</li>
+    </ul>
+
+    <img src="https://www.cultture.com/pics/2023/04/ive-lanza-un-lujoso-video-musical-para-su-nuevo-single-i-am.jpg" alt="아이브언니들" style="height: 400px;">
 
     <hr>
     <form action="">
