--- a/240319_html 연습/index.html
+++ b/240319_html 연습/index.html
@@ -26,12 +26,12 @@
     <ul>
         <li>아잉</li>
         <li>아잉</li>
-        <ol>
+        <ul>
             <li>도</li>
             <li>개</li>
             <li>걸</li>
             <li>윷</li>
-        </ol>
+        </ul>
         <li>아잉</li>
     </ul>
     <ol>
@@ -52,17 +52,17 @@
     <li>소희</li>
 
     <!-- alt = 이미지를 설명해준다 -->
-    <img src="https://image.kpopmap.com/2023/08/riize.png" alt="라이즈오빠들" style="height: 400px;">
+    <img src="https://cdn.topstarnews.net/news/photo/202308/15375407_1154583_2450.jpg" alt="라이즈오빠들" style="height: 400px;">
     <hr>
     <!-- 우선순위 젤 최고 -->
         <h1 style = "background-color: violet; color:blueviolet;">아이브</h1>
     <ul>
-        <li>유진</li>
-        <li>리즈</li>
-        <li>원영</li>
-        <li>가을</li>
-        <li>레이</li>
-        <li>이서</li>
+        <li class = "korea" id = "leader">유진</li>
+        <li class = "korea">리즈</li>
+        <li class = "korea">원영</li>
+        <li class = "korea incheon" >가을</li>
+        <li class = "japan">레이</li>
+        <li class = "korea">이서</li>
     </ul>
 
     <img src="https://www.cultture.com/pics/2023/04/ive-lanza-un-lujoso-video-musical-para-su-nuevo-single-i-am.jpg" alt="아이브언니들" style="height: 400px;">
