--- a/240507_icon/bootstrap_icons.html
+++ b/240507_icon/bootstrap_icons.html
@@ -6,6 +6,7 @@
     <title>Bootstrap Icons</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
     <h1>Bootstrap Icons</h1>
@@ -17,5 +18,6 @@
         <li><i class="bi bi-person-arms-up"></i></li>
         <li><i class="bi bi-umbrella"></i></li>
     </ul>
+    <img src="http://file3.instiz.net/data/cached_img/upload/2022/10/28/13/fa4f4de6d23b34d9e5bee8b4fea5d3bc.jpg" alt="내남친">
 </body>
 </html>
