--- a/240514_nav/index.html
+++ b/240514_nav/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>School Market Domitory</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
@@ -12,7 +13,7 @@
         <nav class = "nav container"> <!--nav.nav.container{네비게이션 바}-->
             <!-- 로고 -->
             <a href="/" class=""nav-logo>
-                로고
+                <i class="bi bi-shop"></i>
             </a>
             <!-- 학교, 매점, 기숙사 -->
             <ul class="nav-list container">
@@ -31,7 +32,7 @@
 
             <!-- 햄버거 메뉴 or 닫기 버튼 -->
             <div class="nav-toggle" id=""nav-toggle>
-                햄버거 메뉴 or 닫기 버튼
+                <i class="bi bi-list"></i>
             </div>
         </nav>
     </header>
