css nav Mobile hide menu

--- a/240514_nav/index.html
+++ b/240514_nav/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class = "nav container"> <!--nav.nav.container{네비게이션 바}-->
             <!-- 로고 -->
-            <a href="/" class=""nav-logo>
+            <a href="/" class="nav-logo">
                 <i class="bi bi-shop"></i>
             </a>
             <!-- 학교, 매점, 기숙사 -->
@@ -31,7 +31,7 @@
                 <!-- 기숙사 -->
 
             <!-- 햄버거 메뉴 or 닫기 버튼 -->
-            <div class="nav-toggle" id=""nav-toggle>
+            <div class="nav-toggle" id="nav-toggle">
                 <i class="bi bi-list"></i>
             </div>
         </nav>
