--- a/240514_nav/index.html
+++ b/240514_nav/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>School Market Domitory</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -10,31 +10,30 @@
 </head>
 <body>
     <header>
-        <nav class = "nav container"> <!--nav.nav.container{네비게이션 바}-->
+        <nav class="nav container">
             <!-- 로고 -->
             <a href="/" class="nav-logo">
                 <i class="bi bi-shop"></i>
             </a>
             <!-- 학교, 매점, 기숙사 -->
-            <ul class="nav-list container">
+            <ul class="nav-list">
+            
                 <!-- 학교 -->
-                <li class="nav-item"><a href="" class="nav-link">학교</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">학교</a></li>
                 <!-- 매점 -->
-                <li class="nav-item"><a href="" class="nav-link">매점</a></li>
-                <!-- 기숙사 -->
-                <li class="nav-item"><a href="" class="nav-link">기숙사</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">매점</a></li>
+                <!— 기숙사 —>
+                    <li class="nav-item"><a href="" class="nav-link">기숙사</a></li>
             </ul>
-                <!-- 학교 -->
 
-                <!-- 매점 -->
-
-                <!-- 기숙사 -->
-
-            <!-- 햄버거 메뉴 or 닫기 버튼 -->
-            <div class="nav-toggle" id="nav-toggle">
-                <i class="bi bi-list"></i>
-            </div>
+            <!— 햄버거 메뉴 or 닫기 버튼 —>
+                <div class="nav-toggle" id="nav-toggle">
+                    <i class="bi bi-list"></i>
+                </div>
         </nav>
+
+        <!— <nav class="nav container">네비게이션바</nav> —>
+
     </header>
 </body>
 </html>
