html school-food, css school-food, 이전/다음 날 버튼 처리

--- a/240514_nav/index.html
+++ b/240514_nav/index.html
@@ -24,11 +24,11 @@
                     <li class="nav-item"><a href="" class="nav-link">학교</a></li>
                 <!-- 매점 -->
                     <li class="nav-item"><a href="" class="nav-link">매점</a></li>
-                <!— 기숙사 —>
+                <!-- 기숙사 -->
                     <li class="nav-item"><a href="" class="nav-link">기숙사</a></li>
             </ul>
 
-            <!— 햄버거 메뉴 or 닫기 버튼 —>
+            <!-- 햄버거 메뉴 or 닫기 버튼 -->
                 <div class="nav-toggle" id="nav-toggle">
                     <i class="bi bi-list"></i>
                 </div>
@@ -39,11 +39,11 @@
     </header>
     <main id="school-food" class="container">
         <section class ="button-container">
-            <button class="btn prev-date">
+            <button class="btn prev-date" onclick="changeDate(-1)">
                 <i class="bi bi-chevron-compact-left"></i>
             </button>
             <header class="school-food-title">🍚 화요일의 메뉴 🍚</header>
-            <button class="btn next-date">
+            <button class="btn next-date" onclick="changeDate(+1)">
                 <i class="bi bi-chevron-compact-right"></i>
             </button>
         </section>
@@ -78,5 +78,6 @@
     </main>
 
     <script src="js/nav.js"></script>
+    <script src="js/school-food.js"></script>
 </body>
 </html>
