--- a/240514_nav/index.html
+++ b/240514_nav/index.html
@@ -42,7 +42,7 @@
             <button class="btn prev-date" onclick="changeDate(-1)">
                 <i class="bi bi-chevron-compact-left"></i>
             </button>
-            <header class="school-food-title">🍚 화요일의 메뉴 🍚</header>
+            <header class="school-food-title"></header>
             <button class="btn next-date" onclick="changeDate(+1)">
                 <i class="bi bi-chevron-compact-right"></i>
             </button>
