--- a/240514_nav/school-market.html
+++ b/240514_nav/school-market.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="school-food.css">
+    <link rel="stylesheet" href="school-market.css">
 </head>
 
 <body>
@@ -36,37 +36,11 @@
         <!-- <!— <nav class="nav container">네비게이션바</nav> —> -->
 
     </header>
-    <main id="school-food" class="container">
-        <section class ="button-container">
-            <button class="btn prev-date" onclick="changeDate(-1)">
-                <i class="bi bi-chevron-compact-left"></i>
-            </button>
-            <header class="school-food-title"></header>
-            <button class="btn next-date" onclick="changeDate(+1)">
-                <i class="bi bi-chevron-compact-right"></i>
-            </button>
-        </section>
-        <section class="menu-container">
-            <article class="school-food-menu">
-                <h2 class="title">조식</h2>
-                <ul class="menu breakfast">
-                </ul>
-            </article>
-            <article class="school-food-menu">
-                <h2 class="title">중식</h2>
-                <ul class="menu lunch">
-                </ul>
-            </article>
-            <article class="school-food-menu">
-                <h2 class="title">석식</h2>
-                <ul class="menu dinner">
-                    <li class="menu-food"></li>
-                </ul>
-            </article>
-        </section>
+    <main id="school-market" class="container">
+       
     </main>
 
     <script src="js/nav.js"></script>
-    <script src="js/school-food.js"></script>
+    <script src="js/school-market.js"></script>
 </body>
 </html>
