html search-container

--- a/240514_nav/school-market.html
+++ b/240514_nav/school-market.html
@@ -37,6 +37,13 @@
 
     </header>
     <main id="school-market" class="container">
+        <section class ="search-container">
+            <input type="text" name="query" id="search-bar">
+            <i class="bi bi-search"></i>
+        </section>
+        <section class="product-container">
+
+        </section>
        
     </main>
 
