--- a/240514_nav/school-market.html
+++ b/240514_nav/school-market.html
@@ -42,7 +42,30 @@
             <i class="bi bi-search"></i>
         </section>
         <section class="product-container">
+            <article class="product-item">
+                <img src="images/요맘때.jpg" alt="" class="product-image">
+                <div class="product-name">요맘때</div>
+            </article>
 
+            <article class="product-item">
+                <img src="images/몽쉘.webp" alt="" class="product-image">
+                <div class="product-name">몽쉘</div>
+            </article>
+
+            <article class="product-item">
+                <img src="images/설레임.jpg" alt="" class="product-image">
+                <div class="product-name">설레임</div>
+            </article>
+
+            <article class="product-item">
+                <img src="images/소금빵.jpg" alt="" class="product-image">
+                <div class="product-name">소금빵</div>
+            </article>
+
+            <article class="product-item">
+                <img src="images/허니버터칩.webp" alt="" class="product-image">
+                <div class="product-name">허니버터칩</div>
+            </article>
         </section>
        
     </main>
