js 이름 검색 성공

--- a/240514_nav/school-market.html
+++ b/240514_nav/school-market.html
@@ -38,7 +38,7 @@
     </header>
     <main id="school-market" class="container">
         <section class ="search-container">
-            <input type="text" name="query" id="search-bar">
+            <input type="text" name="query" id="search-bar" oninput="searchData(this.value)">
             <i class="bi bi-search"></i>
         </section>
         <section class="product-container">
