시간표 완성with.임t

--- a/240514_nav/240827_grid연습/timetable.html
+++ b/240514_nav/240827_grid연습/timetable.html
@@ -3,53 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2-4시간표</title>
+    <title>미림마이스터고 2학년 4반 시간표</title>
     <link rel="stylesheet" href="timetable.css">
 </head>
 <body>
     <div class="container">
-        <div class="item a">/</div>
-        <div class="item a">월</div>
-        <div class="item a">화</div>
-        <div class="item a">수</div>
-        <div class="item a">목</div>
-        <div class="item a">금</div>
-        <div class="item c">1교시</div>
+        <!-- ctrl+art -->
+        <div class="item week_name">🍡</div>
+        <div class="item week_name">월</div>
+        <div class="item week_name">화</div>
+        <div class="item week_name">수</div>
+        <div class="item week_name">목</div>
+        <div class="item week_name">금</div>
+        <div class="item class">1교시</div>
         <div class="item">자치</div>
         <div class="item">수학</div>
         <div class="item">수학</div>
         <div class="item">과학</div>
         <div class="item">국어</div>
-        <div class="item c">2교시</div>
+        <div class="item class">2교시</div>
         <div class="item">수학</div>
         <div class="item">JAVA</div>
-        <div class="item o">JAVA</div>
+        <div class="item java">JAVA</div>
         <div class="item">체육</div>
         <div class="item">영어</div>
-        <div class="item c">3교시</div>
+        <div class="item class">3교시</div>
         <div class="item">체육</div>
-        <div class="item o">자료구조</div>
-        <div class="item o">코딩</div>
-        <div class="item o">wsm</div>
-        <div class="item c">4교시</div>
+        <div class="item Ds">자료구조</div>
+        <div class="item co">코딩</div>
+        <div class="item wsm2">WSM</div>
+        <div class="item class">4교시</div>
         <div class="item">국어</div>
         <div class="item">자료구조</div>
-        <div class="item c">5교시</div>
+        <div class="item class">5교시</div>
         <div class="item">영어</div>
         <div class="item">과학</div>
         <div class="item">영어</div>
-        <div class="item o">파이썬</div>
-        <div class="item o">선택과목</div>
-        <div class="item c">6교시</div>
+        <div class="item python">파이썬</div>
+        <div class="item choice">선택과목</div>
+        <div class="item class">6교시</div>
         <div class="item">과학</div>
-        <div class="item o">wsm</div>
-        <div class="item o">동아리</div>
-
-        <div class="item c">7교시</div>
+        <div class="item wsm">WSM</div>
+        <div class="item class">7교시</div>
         <div class="item">-</div>
+        <div class="item club">동아리</div>
         <div class="item">수학</div>
         <div class="item">-</div>
     </div>
-    
 </body>
 </html>
