--- a/240514_nav/dormitory.html
+++ b/240514_nav/dormitory.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>School Market Domitory</title>
+    <title>School Market Dormitory</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="css/school-food.css">
+    <link rel="stylesheet" href="css/dormitory.css">
+    <link rel="stylesheet" href="css/calendar.css">
     <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 
@@ -33,41 +34,24 @@
                     <i class="bi bi-list"></i>
                 </div>
         </nav>
-
-        <!-- <!— <nav class="nav container">네비게이션바</nav> —> -->
-
     </header>
-    <main id="school-food" class="container">
-        <section class ="button-container">
-            <button class="btn prev-date" onclick="changeDate(-1)">
-                <i class="bi bi-chevron-compact-left"></i>
-            </button>
-            <header class="school-food-title"></header>
-            <button class="btn next-date" onclick="changeDate(+1)">
-                <i class="bi bi-chevron-compact-right"></i>
-            </button>
-        </section>
-        <section class="menu-container">
-            <article class="school-food-menu">
-                <h2 class="title">조식</h2>
-                <ul class="menu breakfast">
-                </ul>
-            </article>
-            <article class="school-food-menu">
-                <h2 class="title">중식</h2>
-                <ul class="menu lunch">
-                </ul>
-            </article>
-            <article class="school-food-menu">
-                <h2 class="title">석식</h2>
-                <ul class="menu dinner">
-                    <li class="menu-food"></li>
-                </ul>
-            </article>
-        </section>
-    </main>
+     <main id="dormitory">
+
+        <!-- 요일 지정 -->
+        <div id="calendar">
+            <div id="calendar-header">
+                <button id="prev-month"><</button>
+                <h1></h1>
+                <button id="next-month">></button>
+    
+            </div>
+            <div id="calendar-container">
+              </div>
+        </div>
+     </main>
 
     <script src="js/nav.js"></script>
-    <script src="js/school-food.js"></script>
+    <script src="js/dormitory.js"></script>
+    <script src="js/calendar.js"></script>
 </body>
 </html>
