calendar -> dormitory로 합치자 html, css, js

--- a/240514_nav/dormitory.html
+++ b/240514_nav/dormitory.html
@@ -36,7 +36,12 @@
         </nav>
     </header>
      <main id="dormitory">
-
+        <h1>세탁기 예약하기</h1>
+        <div id="selection-container">
+            <div class="selection-item">요일 지정</div>
+            <div class="selection-item">시간 선택</div>
+            <div class="selection-item">호실 이름</div>
+        </div>
         <!-- 요일 지정 -->
         <div id="calendar">
             <div id="calendar-header">
@@ -48,6 +53,15 @@
             <div id="calendar-container">
               </div>
         </div>
+
+        <!-- 시간 선택 -->
+         <div id="selection-washingmachine-time">
+
+         </div>
+         <!-- 호실 이름 -->
+          <div id="selection-room-name">
+            
+          </div>
      </main>
 
     <script src="js/nav.js"></script>
