dormitory 호실 이름 html, css

--- a/240514_nav/dormitory.html
+++ b/240514_nav/dormitory.html
@@ -74,8 +74,27 @@
          </div>
          <!-- 호실 이름 -->
           <div id="selection-room-name">
+            <div class="flex-container">
+            <select name="roomname" id="roomname">
+                <option value="">호실</option>
+                <option value="401">401호</option>
+                <option value="402">402호</option>
+                <option value="403">403호</option>
+                <option value="404">404호</option>
+                <option value="405">405호</option>
+                <option value="501">501호</option>
+                <option value="502">502호</option>
+                <option value="503">501호</option>
+                <option value="504">504호</option>
+                <option value="505">505호</option>
+                
+            </select>
+            <input type="text" id="name" name="name" placeholder="이름을 적어주세요">
 
           </div>
+          <button class="btn">다음</button>
+          </div>
+
      </main>
 
     <script src="js/nav.js"></script>
