dormitory 세탁기 예약 현황표 html, css

--- a/240514_nav/dormitory.html
+++ b/240514_nav/dormitory.html
@@ -95,6 +95,63 @@
           <button class="btn">다음</button>
           </div>
 
+          <!--세탁기 예약 현황표-->
+          <div id="board">
+            <div class="board-container">
+                <div class="item header">이름</div>
+                <div class="item header">호실</div>
+                <div class="item header">시간</div>
+                <div class="item header">세탁기</div>
+                <div class="item header">알림</div>
+                <div class="item">김서연</div>
+                <div class="item">501호</div>
+                <div class="item">9시 20분 ~ 10시 30분</div>
+                <div class="item">3번</div>
+                <div class="item">⏰</div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+            </div>
+            <button class="btn">예약 완료</button>
+          </div>
+
      </main>
 
     <script src="js/nav.js"></script>
