dormitory세탁기 번호, 시간 입력받고 3페이지로 이동하자

--- a/240514_nav/dormitory.html
+++ b/240514_nav/dormitory.html
@@ -70,7 +70,7 @@
                 </select>
             </div>
 
-            <button class="btn">다음</button>
+            <button class="btn" onclick="setPage(3)">다음</button>
         </div>
         
         <!-- 호실 이름 -->
@@ -87,7 +87,7 @@
                 <input id="name" placeholder="이름을 적어주세요">
             </div>
 
-            <button class="btn">다음</button>
+            <button class="btn" onclick="setPage(4)">다음</button>
         </div>
 
         <!-- 세탁기 예약 현황표 -->
