--- a/240514_nav/dormitory.html
+++ b/240514_nav/dormitory.html
@@ -77,12 +77,6 @@
         <div id="selection-room-name">
             <div class="flex-container">
                 <select name="room" id="room">
-                    <option value="room">호실</option>
-                    <option value="401">401호</option>
-                    <option value="402">402호</option>
-                    <option value="403">403호</option>
-                    <option value="404">404호</option>
-                    <option value="405">405호</option>
                 </select>
                 <input id="name" placeholder="이름을 적어주세요">
             </div>
@@ -99,8 +93,8 @@
                 <div class="item header">시간</div>
                 <div class="item header">세탁기</div>
                 <div class="item header">알림받기</div>
-                <div class="item">김서연</div>
-                <div class="item">501호</div>
+                <div class="item">연아윤</div>
+                <div class="item">413호</div>
                 <div class="item">10-29(화)</div>
                 <div class="item">9시 20분 ~ 10시 30분</div>
                 <div class="item">3번</div>
